<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <include layout="@layout/include_git_dialog_header" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/push_remote_hint"
            app:helperText="@string/pull_remote_help"
            android:layout_marginBottom="16dp">
            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/etPullRemote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/credentials_label"
            app:helperText="@string/credentials_help">
            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/etPullCred"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</ScrollView>
